# substrate-api-sidecar

./: .dockerignore  .env  .env-docker  .env-docker-sample  .env-sample  .env.docker  .env.local  .env.parity  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .npmignore  .prettierrc.js  .yarnrc.yml  AUCTIONS_WINNERS.md  CHAIN_INTEGRATION.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.README.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  README.md  RELEASE.md  babel.config.js  benchmark_config.json  benchmarks.txt  blocksTrace.json  dataavail.types.json  docker-compose.yml  jest.config.js  justfile  metadata.txt  openapi.yaml  package-lock.json  package.json  shiden-types.json  (+4 more)
.clinic/: 66828.clinic-doctor.html  71028.clinic-doctor.html  71037.clinic-doctor.html
.clinic/66828.clinic-doctor/: 66828.clinic-doctor-processstat  66828.clinic-doctor-systeminfo  66828.clinic-doctor-traceevent
.clinic/66864.clinic-doctor/: 66864.clinic-doctor-processstat  66864.clinic-doctor-systeminfo
.clinic/69890.clinic-doctor/: 69890.clinic-doctor-systeminfo
.clinic/71028.clinic-doctor/: 71028.clinic-doctor-systeminfo  71028.clinic-doctor-traceevent
.clinic/71037.clinic-doctor/: 71037.clinic-doctor-processstat  (+2 more)
.github/: dependabot.yml
benchmarks/: README.md  bench_monitored.sh  bench_with_monitor.sh  blocks.js  init.sh  report.lua  resource_monitor.sh  run.sh  util.lua
calc/: CHANGELOG.md  Cargo.toml  README.md  build.sh
calc-fee/: Cargo.toml  README.md  build.sh
calc-fee/src/: debug.rs  lib.rs  panic.rs
calc-payout/: Cargo.toml  README.md  build.sh
calc-payout/src/: lib.rs
calc/pkg/: README.md  calc.d.ts  calc.js  calc_bg.d.ts  calc_bg.wasm  package.json
calc/sp-arithmetic-legacy/: Cargo.toml
calc/sp-arithmetic-legacy/benches/: bench.rs
calc/sp-arithmetic-legacy/src/: biguint.rs  fixed128.rs  fixed64.rs  helpers_128bit.rs  lib.rs  per_things.rs  rational128.rs  traits.rs
calc/src/: calc_actual_fee.rs  calc_fee.rs  calc_partial_fee.rs  calc_payout.rs  debug.rs  lib.rs  test.rs
config/: errors-en.json  setCodeBlocks.ts  types.json
docs/: README.md  index.html  package.json  webpack.config.js
docs-v2/: DESIGN_PLAN.md  README.md  index.html  openapi-v1.yaml  package-lock.json  package.json  webpack.config.js
docsv2/: bundle.js
e2e-tests/: .eslintrc.js  README.md  historical-e2e-tests.spec.ts  index.ts  jest.config.js  runtimeTests.spec.ts  tsconfig.json
guides/: ASSET_HUB_MIGRATION.md  AUCTIONS_WINNERS.md  CHAIN_FEE_INTEGRATION.md  CHAIN_INTEGRATION.md  CONTRIBUTING.md  ELASTIC_SCALING_MIGRATION.md  MAINTENANCE.md  MIGRATION_GUIDE.md  STAKING_IMPLEMENTATION_DETAILS.md
hacks/: build.sh  dev.sh
helm/: Chart.yaml  values.yaml
memory-profiles/: _-2025-09-23T21-29-23-813Z.csv  _-2025-09-23T21-58-02-754Z.csv  _accounts_12BnVhXxGBZXoq9QAkSv9UtVcdBs1k38yNx6sHUJWasTgYrm_staking_info-2025-09-23T21-29-23-813Z.csv  _accounts_12BnVhXxGBZXoq9QAkSv9UtVcdBs1k38yNx6sHUJWasTgYrm_staking_info-2025-09-23T21-58-02-754Z.csv  _accounts_12BnVhXxGBZXoq9QAkSv9UtVcdBs1k38yNx6sHUJWasTgYrm_staking_payouts-2025-09-23T21-29-23-813Z.csv  _accounts_12BnVhXxGBZXoq9QAkSv9UtVcdBs1k38yNx6sHUJWasTgYrm_staking_payouts-2025-09-23T21-58-02-754Z.csv  _accounts_12xtAYsRUrmbniiWQqJtECiBQrMn8AypQcXhnQAc6RB6XkLW_balance_info-2025-09-23T21-29-23-813Z.csv  _accounts_12xtAYsRUrmbniiWQqJtECiBQrMn8AypQcXhnQAc6RB6XkLW_balance_info-2025-09-23T21-58-02-754Z.csv  _accounts_15aKvwRqGVAwuBMaogtQXhuz9EQqUWsZJSAzomyb5xYwgBXA_vesting_info-2025-09-23T21-29-23-813Z.csv  _accounts_15aKvwRqGVAwuBMaogtQXhuz9EQqUWsZJSAzomyb5xYwgBXA_vesting_info-2025-09-23T21-58-02-754Z.csv  _accounts_DXgXPAT5zWtPHo6FhVvrDdiaDPgCNGxhJAeVBYLtiwW9hAc_validate-2025-09-23T21-29-23-813Z.csv  _accounts_DXgXPAT5zWtPHo6FhVvrDdiaDPgCNGxhJAeVBYLtiwW9hAc_validate-2025-09-23T21-58-02-754Z.csv  _blocks-2025-09-23T21-29-23-813Z.csv  _blocks-2025-09-23T21-58-02-754Z.csv  _blocks_-2025-09-23T21-29-23-813Z.csv  _blocks_-2025-09-23T21-58-02-754Z.csv  _blocks_head-2025-09-23T21-29-23-813Z.csv  _blocks_head-2025-09-23T21-58-02-754Z.csv  _node_network-2025-09-23T21-29-23-813Z.csv  _node_network-2025-09-23T21-58-02-754Z.csv  _node_transaction_pool-2025-09-23T21-29-23-813Z.csv  _node_transaction_pool-2025-09-23T21-58-02-754Z.csv  _node_version-2025-09-23T21-29-23-813Z.csv  _node_version-2025-09-23T21-58-02-754Z.csv  _pallets_MessageQueue_consts-2025-09-23T21-29-23-813Z.csv  _pallets_MessageQueue_consts-2025-09-23T21-58-02-754Z.csv  _pallets_System_storage-2025-09-23T21-29-23-813Z.csv  _pallets_System_storage-2025-09-23T21-58-02-754Z.csv  _pallets_System_storage_BlockWeight-2025-09-23T21-29-23-813Z.csv  _pallets_System_storage_BlockWeight-2025-09-23T21-58-02-754Z.csv  _pallets_balances_errors-2025-09-23T21-29-23-813Z.csv  _pallets_balances_errors-2025-09-23T21-58-02-754Z.csv  _pallets_balances_events-2025-09-23T21-29-23-813Z.csv  _pallets_balances_events-2025-09-23T21-58-02-754Z.csv  _pallets_nomination_pools_info-2025-09-23T21-29-23-813Z.csv  _pallets_nomination_pools_info-2025-09-23T21-58-02-754Z.csv  _pallets_staking_progress-2025-09-23T21-29-23-813Z.csv  _pallets_staking_progress-2025-09-23T21-58-02-754Z.csv  _pallets_staking_validators-2025-09-23T21-29-23-813Z.csv  _pallets_staking_validators-2025-09-23T21-58-02-754Z.csv  (+14 more)
metrics/: prometheus.yml
openapi/: README.md  index.html  openapi-proposal.yaml  package.json
runtime-tests/: README.md  cli.ts  index.ts  jest.config.js  package.json  runtimeTests.spec.ts  tsconfig.json
scripts/: .eslintignore  README.md  benchmarkConfig.ts  config.ts  e2eHelpers.ts  runBenchmarks.ts  runChainTests.ts  runE2eTests.ts  runHistoricalE2eTests.ts  runLatestE2eTests.ts  runYarnPack.ts  run_chain_tests.py  sidecarScriptApi.ts  tsconfig.json  types.ts
src/: ApiHandler.spec.ts  ApiHandler.ts  App.ts  Cli.ts  Config.ts  SidecarConfig.ts  Specs.ts  address-testing.js  config.json  config_setup.ts  constants.ts  controllerInjection.spec.ts  crust-type.json  fileLog.ts  main.rs  main.ts  middleware.ts  openapi-proposal.yaml  parseArgs.ts  sanitize.ts  utils.ts
(+1569 files in other folders)
