[package]
name = "substrate-rpc-proxy"
version = "0.1.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0-alpha.3"
actix-web = "2.0.0-alpha.4"
frame-system = { git = "https://github.com/paritytech/substrate/" }
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt/" }
sp-rpc = { git = "https://github.com/paritytech/substrate/" }
sp-core = { git = "https://github.com/paritytech/substrate/" }
tokio = "0.1"
url = "1.7"
futures-util = "0.3"