[package]
name = "calc-payout"
version = "0.1.0"
authors = ["Zeke Mostov <zeke@parity.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false
repository = "https://github.com/polkadot-js/wasm/"
description = "Calculate staking payouts off-chain"

[lib]
crate-type = ["cdylib"]

[features]
debug = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = { version = "0.2.67" }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2.0", optional = true }
log = "0.4.8"

[dependencies.sp-arithmetic]
version = "2.0.0-rc5"
default_features = false

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

