[package]
name = "calc"
version = "0.3.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false
repository = "git+https://github.com/paritytech/substrate-api-sidecar.git"
description = "Off-chain calculations for @substrate/api-sidecar."
homepage = "https://github.com/paritytech/substrate-api-sidecar/tree/master/calc#readme"

[lib]
crate-type = ["cdylib"]

[features]
debug = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = { version = "0.2.82", default_features = false, features = ["serde-serialize"] }
serde_derive = { version = "1", default_features = false }
serde = { version = "1", default_features = false }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2", optional = true }
log = "0.4"

[dependencies.sp-arithmetic]
version = "5.0.0"
default_features = false

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
